# digitailze

./: Dockerfile  README.md  coding-encoding.py  docker-compose.yml  play_no_gil.py  pyproject.toml
shell_directory/lesson4_10/: results.txt
shell_directory/lesson4_15/: text
shell_directory/lesson4_21/: description.txt
shell_directory/lesson4_21_6/: 2.txt
solutions/: cities.json  cities.xml  parcers.py
