[tool.poetry]
name = "digital"
version = "0.1.0"
description = ""
authors = ["aleksandr-kamenev <alexander.i.kamenev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
